--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "consolidate": "^0.16.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "email-templates": "^8.0.8",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
+    "nunjucks": "^3.2.3",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
