--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "nodemailer": "^6.7.2",
     "nunjucks": "^3.2.3",
     "passport": "^0.5.0",
+    "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
+    "eslint": "^8.7.0",
     "nodemon": "^2.0.13"
   }
 }
